a couple comments sent up to master

--- a/someindex.html
+++ b/someindex.html
@@ -10,70 +10,8 @@
 
 <body>
 
-<header><!--Top Navbar-->
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
-
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#"></a>
-    </div><!--Navebar header-->
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-      <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Home</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-
-      <ul class="nav navbar-nav navbar-right">
-        <li class="active">
-          <a href="#">Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">General Maintenance
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Oil Change</a></li>
-            <li><a href="#">Alignment</a></li>
-            <li><a href="#">Brakes</a></li>
-            <li><a href="#">Brakes</a></li>
-            <li><a href="#">Brakes</a></li>
-            <li><a href="#">Brakes</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Home</a></li>
-          </ul>
-        </li><!--General Main dropdown-->
-        <li> <a href="#Tires">Tires</a></li>
-        <li> <a href="#Promotions">Promotions</a></li>
-        <li> <a href="#promise">Our Promise</a></li>
-        <li> <a href="#staff">Staff</a></li>        
-      </ul><!--nav navbar-nav navbar-right-->
-
-    </div><!-- /.navbar-collapse -->
-
-  </div><!-- /.container-fluid -->
-  </nav><!--Top Navbar-->
-</header><!--End Top Navbar-->
+<h1>This is my second attempt to see if I can ge back to the master</h1>
+<h1> first I'm going to merge this with master</h1>
 
 
 <div class="row"><!--All content container: sedondary navbar 2 coulums and all pages in 10 columns-->
