Section to keep now, after deleted.

--- a/someindex.html
+++ b/someindex.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<h1>DELETED SECTION</h1>
+<h1>I've decided I don't want this section so I'm going to push it up to git</h1>
 
 </body>
 
